👷 Add reencoding github action for publish
We should actually reencode the dictionaries to the UTF-8 encoding as
there is [issue](https://github.com/kwonoj/hunspell-asm#things-to-note) with the `hunspell-asm` package which only allows to use
the UTF-8 encoded dictionaries otherwise it returns garbage

BREAKING CHANGE
---
The breaking change is that now the dictionaries should be loaded from
the build folder

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,10 @@ jobs:
       with:
         node-version: '14.x'
         registry-url: 'https://npm.pkg.github.com'
+    - name: Build reencode action
+      run: cd ./.github/actions/reencode-dictionaries && npm install && cd ../../../
+    - name: "Change dictionaries encoding to UTF-8"
+      uses: ./.github/actions/reencode-dictionaries
     - name: Publish
       run: npm publish
       env:
