🐛 Missing ca dictionaries in build
We are missing the ca dictionaries as the dictionaries folder is inside
ca folder, so before reencoding dictionaries we move them to ca folder.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
         registry-url: 'https://npm.pkg.github.com'
     - name: Build reencode action
       run: cd ./.github/actions/reencode-dictionaries && npm install && cd ../../../
+    - name: Move dictoinaries to root folder
+      run: cp ./ca/dictionaries/* ./ca
     - name: "Change dictionaries encoding to UTF-8"
       uses: ./.github/actions/reencode-dictionaries
     - name: Publish
