--- a/.github/actions/reencode-dictionaries/package.json
+++ b/.github/actions/reencode-dictionaries/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build src/index.js -o ."
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
